# Hailr

./: .index.html.swp  CMakeLists.txt  index.html  package-lock.json  package.json  package.xml  python_audio_test.py  script.js  style.css
launch/: local.launch  vessel.launch
scripts/: autostart.sh  http.sh  http_web.sh
