<?xml version="1.0"?>
<package format="2">
  <name>hailr</name>
  <version>0.0.0</version>
  <description>
    Web Interface for the garmin Cortex M1 ROS Driver
  </description>

  <author email="amunoz@ccom.unh.edu">Avery Munoz</author>
  <maintainer email="amunoz@ccom.unh.edu">Avery Munoz</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rosbridge_server</depend>
</package>
